# capybara-messenger

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.MD  asio-Target-release.cmake  asio-config-version.cmake  asio-config.cmake  asio-release-armv8-data.cmake  asioTargets.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-armv8.sh  conanfile.py  conanfile.txt  conanrun.sh  conanrunenv-release-armv8.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
client/: CMakeLists.txt  messenger_client.pro
client/include/: client.hpp  mainwindow.h  user.hpp
client/src/: client.cpp  main.cpp  mainwindow.cpp
common/: CMakeLists.txt  common.pro  message.cpp  message.hpp  user.cpp
server/: CMakeLists.txt  messenger_server.pro
server/include/: database.hpp  server.hpp
server/src/: database.cpp  main.cpp  main_server.cpp  server.cpp
